language-server/src/tests/snapshots/gleam_language_server__tests__action__fill_in_labelled_args_works_with_constant_record_with_no_args.snap
---
source: language-server/src/tests/action.rs
expression: "\npub const wibble = Wibble\npub type Wibble { Wibble(arg1: Int, arg2: String) }\n "
---
----- BEFORE ACTION

pub const wibble = Wibble
                   ▔▔▔▔▔↑
pub type Wibble { Wibble(arg1: Int, arg2: String) }
 


----- AFTER ACTION

pub const wibble = Wibble(arg1: todo, arg2: todo)
pub type Wibble { Wibble(arg1: Int, arg2: String) }
