language-server/src/tests/snapshots/gleam_language_server__tests__action__fill_in_labelled_args_works_with_pipes_2.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  1 |> wibble()\n}\n\npub fn wibble(not_labelled, arg1 arg1, arg2 arg2) { Nil }\n "
---
----- BEFORE ACTION

pub fn main() {
  1 |> wibble()
              ↑
}

pub fn wibble(not_labelled, arg1 arg1, arg2 arg2) { Nil }
 


----- AFTER ACTION

pub fn main() {
  1 |> wibble(arg1: todo, arg2: todo)
}

pub fn wibble(not_labelled, arg1 arg1, arg2 arg2) { Nil }
