language-server/src/tests/snapshots/gleam_language_server__tests__action__fill_in_labelled_args_works_with_record_constructor.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  Wibble()\n}\n\npub type Wibble { Wibble(arg1: Int, arg2: String) }\n "
---
----- BEFORE ACTION

pub fn main() {
  Wibble()
  ▔▔▔▔▔▔▔↑
}

pub type Wibble { Wibble(arg1: Int, arg2: String) }
 


----- AFTER ACTION

pub fn main() {
  Wibble(arg1: todo, arg2: todo)
}

pub type Wibble { Wibble(arg1: Int, arg2: String) }
